# banter

./: .gitignore  .woodpecker.yml  BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  GROUPME_API.md  README.md  STYLE_GUIDE.md  TODO.md  build-all.sh  land.rob.Banter.json  meson.build
.forgejo/workflows/: ci.yml  flatpak.yml  publish.yml
.github/workflows/: flatpak.yml
build-aux/flatpak/: README.md  flathub-land.rob.Banter.json  flathub-land.rob.banter.json  land.rob.Banter.json  land.rob.banter.json
data/: banter-demo.json  banter.flatpakrepo  land.rob.Banter.appdata.xml.in  land.rob.Banter.desktop.in  land.rob.Banter.gschema.xml  land.rob.Banter.metainfo.xml.in  land.rob.banter.desktop.in  land.rob.banter.gschema.xml  land.rob.banter.metainfo.xml.in  meson.build
data/ui/: help-overlay.blp  jump-to-date-dialog.blp  land.rob.Banter.gresource.xml  land.rob.banter.gresource.xml  meson.build  style.css  window.blp
docs/: background.md  quickstart.md
po/: POTFILES  POTFILES.in  meson.build
scripts/: publish-repo.sh
src/: api.py  application.py  async_utils.py  config.py  constants.py  css.py  helpers.py  main.py  meson.build  mock_api.py  oauth.py  push.py  secrets.py  window.py
src/banter/: __init__.py  api.py  application.py  async_utils.py  background_portal.py  banter.in  config.py  const.py.in  constants.py  helpers.py  logging_setup.py  meson.build  mock_api.py  notifications.py  notifier.py  oauth.py  push.py  secrets.py  window.py
src/banter/api/: __init__.py  _core.py  dms.py  extras.py  groups.py  media.py
src/banter/dialogs/: accounts.py  events.py  gallery.py  group.py  jump_to_date.py  members.py  pinned.py  preferences.py  profile.py  settings.py
src/banter/dialogs/gallery/: __init__.py  _helpers.py  album_creator.py  album_picker.py  album_view.py  gallery.py
src/banter/widgets/: album_card.py  base.py  chat_view.py  conversation_row.py  event_card.py  mention_popover.py  message_bubble.py  misc.py  poll_card.py  reactions_sheet.py
src/banter/widgets/chat_view/: __init__.py  _attachments.py  _jump_to_date.py  _mentions.py  _messages.py  _pinned.py  _polling.py  _read_receipts.py  _search.py  _sending.py  _typing.py  _voice.py  chat_view.py
src/banter/widgets/message_bubble/: __init__.py  _context_menu.py  _reactions.py  _save_actions.py  _status.py  _text.py  bubble.py  edit_dialog.py
src/banter/widgets/misc/: __init__.py  date.py  file.py  image.py  loading_row.py  video.py  voice.py
src/banter/window/: __init__.py  _actions.py  _bg_poll.py  _chat.py  _login.py  _mute.py  _push.py  _sidebar.py  window.py
src/dialogs/: __init__.py  accounts.py  events.py  gallery.py  group.py  jump_to_date.py  login.py  members.py  pinned.py  settings.py
src/widgets/: __init__.py  base.py  chat_view.py  conversation_row.py  event_card.py  mention_popover.py  message_bubble.py  misc.py  poll_card.py  reactions_sheet.py
tests/: conftest.py  meson.build  test_api_endpoints.py  test_api_request.py
